@@ -22,8 +22,8 @@
  */
 package com.oracle.graal.compiler.common.util;
 
-import jdk.internal.jvmci.common.*;
-import sun.misc.*;
+import static com.oracle.graal.compiler.common.util.UnsafeAccess.UNSAFE;
+import sun.misc.Unsafe;
 
 /**
  * Provides low-level read access from a byte[] array for signed and unsigned values of size 1, 2,
@@ -40,11 +40,11 @@ import sun.misc.*;
 public abstract class UnsafeArrayTypeReader implements TypeReader {
 
     public static int getS1(byte[] data, long byteIndex) {
-        return UnsafeAccess.unsafe.getByte(data, readOffset(data, byteIndex, Byte.BYTES));
+        return UNSAFE.getByte(data, readOffset(data, byteIndex, Byte.BYTES));
     }
 
     public static int getU1(byte[] data, long byteIndex) {
-        return UnsafeAccess.unsafe.getByte(data, readOffset(data, byteIndex, Byte.BYTES)) & 0xFF;
+        return UNSAFE.getByte(data, readOffset(data, byteIndex, Byte.BYTES)) & 0xFF;
     }
 
     public static int getS2(byte[] data, long byteIndex, boolean supportsUnalignedMemoryAccess) {
@@ -141,15 +141,15 @@ public abstract class UnsafeArrayTypeReader implements TypeReader {
 
 final class UnalignedUnsafeArrayTypeReader extends UnsafeArrayTypeReader {
     protected static int getS2(byte[] data, long byteIndex) {
-        return UnsafeAccess.unsafe.getShort(data, readOffset(data, byteIndex, Short.BYTES));
+        return UNSAFE.getShort(data, readOffset(data, byteIndex, Short.BYTES));
     }
 
     protected static int getS4(byte[] data, long byteIndex) {
-        return UnsafeAccess.unsafe.getInt(data, readOffset(data, byteIndex, Integer.BYTES));
+        return UNSAFE.getInt(data, readOffset(data, byteIndex, Integer.BYTES));
     }
 
     protected static long getS8(byte[] data, long byteIndex) {
-        return UnsafeAccess.unsafe.getLong(data, readOffset(data, byteIndex, Long.BYTES));
+        return UNSAFE.getLong(data, readOffset(data, byteIndex, Long.BYTES));
     }
 
     protected UnalignedUnsafeArrayTypeReader(byte[] data, long byteIndex) {
@@ -181,28 +181,28 @@ final class UnalignedUnsafeArrayTypeReader extends UnsafeArrayTypeReader {
 class AlignedUnsafeArrayTypeReader extends UnsafeArrayTypeReader {
     protected static int getS2(byte[] data, long byteIndex) {
         long offset = readOffset(data, byteIndex, Short.BYTES);
-        return ((UnsafeAccess.unsafe.getByte(data, offset + 0) & 0xFF) << 0) | //
-                        (UnsafeAccess.unsafe.getByte(data, offset + 1) << 8);
+        return ((UNSAFE.getByte(data, offset + 0) & 0xFF) << 0) | //
+                        (UNSAFE.getByte(data, offset + 1) << 8);
     }
 
     protected static int getS4(byte[] data, long byteIndex) {
         long offset = readOffset(data, byteIndex, Integer.BYTES);
-        return ((UnsafeAccess.unsafe.getByte(data, offset + 0) & 0xFF) << 0) | //
-                        ((UnsafeAccess.unsafe.getByte(data, offset + 1) & 0xFF) << 8) | //
-                        ((UnsafeAccess.unsafe.getByte(data, offset + 2) & 0xFF) << 16) | //
-                        (UnsafeAccess.unsafe.getByte(data, offset + 3) << 24);
+        return ((UNSAFE.getByte(data, offset + 0) & 0xFF) << 0) | //
+                        ((UNSAFE.getByte(data, offset + 1) & 0xFF) << 8) | //
+                        ((UNSAFE.getByte(data, offset + 2) & 0xFF) << 16) | //
+                        (UNSAFE.getByte(data, offset + 3) << 24);
     }
 
     protected static long getS8(byte[] data, long byteIndex) {
         long offset = readOffset(data, byteIndex, Long.BYTES);
-        return ((long) ((UnsafeAccess.unsafe.getByte(data, offset + 0) & 0xFF)) << 0) | //
-                        ((long) ((UnsafeAccess.unsafe.getByte(data, offset + 1) & 0xFF)) << 8) | //
-                        ((long) ((UnsafeAccess.unsafe.getByte(data, offset + 2) & 0xFF)) << 16) | //
-                        ((long) ((UnsafeAccess.unsafe.getByte(data, offset + 3) & 0xFF)) << 24) | //
-                        ((long) ((UnsafeAccess.unsafe.getByte(data, offset + 4) & 0xFF)) << 32) | //
-                        ((long) ((UnsafeAccess.unsafe.getByte(data, offset + 5) & 0xFF)) << 40) | //
-                        ((long) ((UnsafeAccess.unsafe.getByte(data, offset + 6) & 0xFF)) << 48) | //
-                        ((long) (UnsafeAccess.unsafe.getByte(data, offset + 7)) << 56);
+        return ((long) ((UNSAFE.getByte(data, offset + 0) & 0xFF)) << 0) | //
+                        ((long) ((UNSAFE.getByte(data, offset + 1) & 0xFF)) << 8) | //
+                        ((long) ((UNSAFE.getByte(data, offset + 2) & 0xFF)) << 16) | //
+                        ((long) ((UNSAFE.getByte(data, offset + 3) & 0xFF)) << 24) | //
+                        ((long) ((UNSAFE.getByte(data, offset + 4) & 0xFF)) << 32) | //
+                        ((long) ((UNSAFE.getByte(data, offset + 5) & 0xFF)) << 40) | //
+                        ((long) ((UNSAFE.getByte(data, offset + 6) & 0xFF)) << 48) | //
+                        ((long) (UNSAFE.getByte(data, offset + 7)) << 56);
     }
 
     protected AlignedUnsafeArrayTypeReader(byte[] data, long byteIndex) {
