@@ -22,24 +22,42 @@
  */
 package com.oracle.graal.graph;
 
-import static com.oracle.graal.graph.Edges.Type.*;
-import static com.oracle.graal.graph.Graph.*;
+import static com.oracle.graal.graph.Edges.Type.Inputs;
+import static com.oracle.graal.graph.Edges.Type.Successors;
+import static com.oracle.graal.graph.Graph.MODIFICATION_COUNTS_ENABLED;
+import static com.oracle.graal.graph.UnsafeAccess.UNSAFE;
 
-import java.lang.annotation.*;
-import java.util.*;
-import java.util.function.*;
+import java.lang.annotation.ElementType;
+import java.lang.annotation.RetentionPolicy;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.EnumSet;
+import java.util.Formattable;
+import java.util.FormattableFlags;
+import java.util.Formatter;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.function.BiConsumer;
+import java.util.function.Predicate;
 
-import jdk.internal.jvmci.common.*;
-import com.oracle.graal.debug.*;
-import sun.misc.*;
+import sun.misc.Unsafe;
 
-import com.oracle.graal.compiler.common.*;
+import com.oracle.graal.compiler.common.CollectionsFactory;
+import com.oracle.graal.compiler.common.Fields;
+import com.oracle.graal.debug.Fingerprint;
 import com.oracle.graal.graph.Graph.NodeEvent;
 import com.oracle.graal.graph.Graph.NodeEventListener;
 import com.oracle.graal.graph.Graph.Options;
-import com.oracle.graal.graph.iterators.*;
-import com.oracle.graal.graph.spi.*;
-import com.oracle.graal.nodeinfo.*;
+import com.oracle.graal.graph.iterators.NodeIterable;
+import com.oracle.graal.graph.iterators.NodePredicate;
+import com.oracle.graal.graph.spi.Simplifiable;
+import com.oracle.graal.graph.spi.SimplifierTool;
+import com.oracle.graal.nodeinfo.InputType;
+import com.oracle.graal.nodeinfo.NodeInfo;
+import com.oracle.graal.nodeinfo.Verbosity;
 
 /**
  * This class is the base class for all nodes. It represents a node that can be inserted in a
@@ -814,7 +832,7 @@ public abstract class Node implements Cloneable, Formattable {
         Node newNode = null;
         try {
             if (USE_UNSAFE_TO_CLONE) {
-                newNode = (Node) UnsafeAccess.unsafe.allocateInstance(getClass());
+                newNode = (Node) UNSAFE.allocateInstance(getClass());
                 newNode.nodeClass = nodeClassTmp;
                 nodeClassTmp.getData().copy(this, newNode);
                 copyOrClearEdgesForClone(newNode, Inputs, edgesToCopy);
